--- a/requirements.txt
+++ b/requirements.txt
@@ -1,182 +1,5 @@
-absl-py==1.4.0
-appdirs==1.4.3
-apturl==0.5.2
-arrow==1.2.3
 asgiref==3.5.2
-asttokens==2.2.0
-astunparse==1.6.3
-autopep8==2.0.1
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-bcrypt==3.1.7
-blessed==1.19.1
-blinker==1.4
-boto3==1.26.27
-botocore==1.29.27
-Brlapi==0.7.0
-cachetools==5.3.0
-certifi==2019.11.28
-chardet==3.0.4
-class-registry==2.1.2
-Click==7.0
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-debugpy==1.6.4
-decorator==5.1.1
-defer==1.0.6
-defusedxml==0.7.1
-devscripts===2.20.2ubuntu2
-diff-match-patch==20200713
-distlib==0.3.0
-distro==1.4.0
-distro-info===0.23ubuntu1
-Django==3.2
-django-autoslug==1.9.8
-django-cors-headers==3.13.0
-django-crontab==0.7.1
-django-filter==22.1
-django-import-export==3.0.2
-django-picklefield==3.1
-django-q==1.3.9
-django-utils-six==2.0
+Django==4.0.6
+sqlparse==0.4.2
+tzdata==2022.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
-docutils==0.20.1
-duplicity==0.8.12.0
-entrypoints==0.3
-et-xmlfile==1.1.0
-evdev==1.6.1
-executing==1.2.0
-fasteners==0.14.1
-filelock==3.0.12
-filters==1.3.2
-flatbuffers==23.3.3
-future==0.18.2
-gast==0.4.0
-google-auth==2.16.2
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-gpg===1.13.1-unknown
-grpcio==1.51.3
-h5py==3.8.0
-httplib2==0.14.0
-idna==2.8
-imageai==3.0.3
-importlib-metadata==6.0.0
-ipykernel==6.17.1
-ipython==8.7.0
-jedi==0.18.2
-jmespath==1.0.1
-jupyter-client==7.4.7
-jupyter-core==5.1.0
-keras==2.11.0
-keyboard==0.13.5
-keyring==18.0.1
-Kivy==2.2.0
-Kivy-Garden==0.1.5
-kivymd==1.1.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-libclang==15.0.6.1
-lockfile==0.12.2
-louis==3.12.0
-Mako==1.1.0
-Markdown==3.4.1
-MarkupPy==1.14
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-monotonic==1.5
-more-itertools==4.2.0
-nest-asyncio==1.5.6
-netifaces==0.10.4
-numpy==1.23.5
-oauthlib==3.1.0
-odfpy==1.4.1
-olefile==0.46
-opencv-python==4.7.0.72
-openpyxl==3.0.10
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.5.2
-paramiko==2.6.0
-parso==0.8.3
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==7.0.0
-pipenv==11.9.0
-platformdirs==2.5.4
-prompt-toolkit==3.0.33
-protobuf==3.19.6
-psutil==5.9.4
-psycopg2-binary==2.9.5
-pure-eval==0.2.2
-pyactiveresource==2.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycodestyle==2.10.0
-pycups==1.9.73
-Pygments==2.13.0
-PyGObject==3.36.0
-PyJWT==2.6.0
-PyNaCl==1.3.0
-pynput==1.7.6
-pyparsing==3.0.9
-pysqlcipher3==1.1.0
-python-apt==2.0.0+ubuntu0.20.4.8
-python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
-python-magic==0.4.16
-python-xlib==0.33
-pytz==2022.6
-pyxdg==0.26
-PyYAML==5.3.1
-pyzmq==24.0.1
-redis==3.5.3
-regex==2022.10.31
-requests==2.22.0
-requests-oauthlib==1.3.1
-requests-unixsocket==0.2.0
-rsa==4.9
-s3transfer==0.6.0
-SecretStorage==2.3.1
-ShopifyAPI==12.3.0
-simplejson==3.16.0
-six==1.14.0
-sqlparse==0.4.3
-stack-data==0.6.2
-systemd-python==234
-tablib==3.3.0
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.2.0
-tomli==2.0.1
-tornado==6.2
-traitlets==5.6.0
-typing-extensions==4.5.0
-ubuntu-advantage-tools==27.11.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-unidiff==0.5.5
-urllib3==1.25.8
-usb-creator==0.3.7
-virtualenv==20.0.17
-virtualenv-clone==0.3.0
-wadllib==1.3.3
-wcwidth==0.2.5
-Werkzeug==2.2.3
-wrapt==1.15.0
-xkit==0.0.0
-xlrd==2.0.1
-xlwt==1.3.0
-zipp==1.0.0
